syntax = "proto3";

package raft;
option go_package = "github.com/Xenn-00/distributed-kv-store/proto/raftpb";

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

message LogEntry {
    uint64 term = 1;
    uint64 index = 2;
    bytes command = 3; // serialized command KV operation
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
    uint64 matchIndex = 3; // for optimization: index of the last entry matched
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}

message InstallSnapshotRequest {
    uint64 term = 1;
    string leaderId = 2;
    uint64 lastIncludedIndex = 3;
    uint64 lastIncludedTerm = 4;
    bytes data = 5;
}

message InstallSnapshotResponse {
    uint64 term = 1;
}

